# cppProjectScript

./: CMakeLists.txt  LICENSE  README.md  cpp_new.bash
